# KVStore

./: .clang-tidy  .gitignore  CMakeLists.txt  CTestTestfile.cmake  LICENSE  study.md
.github/workflows/: ci.yml
cmake/: kvstore_grpc.cmake
deploy/: README.md  kvd_cluster_node_1.toml  kvd_cluster_node_2.toml  kvd_cluster_node_3.toml  kvd_cluster_node_4.toml  kvd_cluster_node_5.toml  kvd_single_process.conf
docs/: README.md  architecture.md  operations.md  release.md  security.md  storage-format.md  testing.md  wire-protocol.md
docs/adr/: 0001-consistency-model-linearizable-v1.md  0002-static-membership-five-node-v1.md  0003-integrity-checksum-strategy-v1.md  0004-deferred-scope-v1-boundary.md
docs/architecture/: scope.md
docs/interview/: cpp_infra_kvstore_interview_qa.md  cpp_infra_kvstore_interview_spoken.md
docs/superpowers/plans/: 2026-04-06-interview-qa-v2.md  2026-04-06-interview-spoken.md  2026-04-06-kvstore-cluster-node-runtime.md  2026-04-06-kvstore-hardening.md  2026-04-06-kvstore-snapshot.md
docs/superpowers/specs/: 2026-04-06-interview-qa-v2-design.md  2026-04-06-interview-spoken-design.md  2026-04-06-kvstore-cluster-node-design.md  2026-04-06-kvstore-hardening-design.md  2026-04-06-kvstore-snapshot-design.md
include/kvstore/: smoke.h
include/kvstore/api/: grpc_kv_service.h
include/kvstore/cache/: block_cache.h
include/kvstore/engine/: compaction.h  kv_engine.h  memtable.h  sstable.h  wal.h
include/kvstore/integrity/: crc32c.h  integrity_error.h
include/kvstore/raft/: cluster_runtime.h  inprocess_transport.h  network_transport.h  raft_node.h  raft_proto_conversion.h  raft_storage.h  raft_transport.h  raft_types.h  test_transport.h
include/kvstore/runtime/: cluster_config.h
include/kvstore/service/: cluster_node_service.h  kv_raft_service.h  raft_peer_service.h
proto/: README.md
proto/kvstore/v1/: kv.proto  raft.proto
scripts/bench/: assert_slo.py  run_baseline.sh
scripts/chaos/: assert_restart_rto.py  kill_leader_and_assert.py  partition_heal_check.py
scripts/ci/: bootstrap_grpc_runtime.sh  bootstrap_proto_tools.sh  check_proto_contract_compile.sh  check_scope_contract.sh  local_check.sh
scripts/cluster/: start_local_cluster.sh  stop_local_cluster.sh
scripts/docs/: check_command_blocks.sh  check_required_docs.sh  check_study_timeline.py
scripts/git/: check_commit_messages.sh
scripts/integrity/: corrupt_sst_block.py  corrupt_wal_byte.py  run_corruption_suite.py
scripts/release/: check_release_readiness.sh
src/: CMakeLists.txt  smoke.cpp
src/api/: grpc_kv_service.cpp
src/cache/: block_cache.cpp
src/engine/: compaction.cpp  kv_engine.cpp  memtable.cpp  sstable.cpp  wal.cpp
src/integrity/: crc32c.cpp
src/raft/: cluster_runtime.cpp  inprocess_transport.cpp  network_transport.cpp  raft_node.cpp  raft_proto_conversion.cpp  raft_storage.cpp  test_transport.cpp
src/runtime/: cluster_config.cpp
src/service/: cluster_node_service.cpp  kv_raft_service.cpp  raft_peer_service.cpp
tests/: CMakeLists.txt  cache_test.cpp  cluster_config_test.cpp  cluster_node_smoke_test.cpp  compaction_test.cpp  idempotency_test.cpp  raft_election_test.cpp  raft_failover_test.cpp  raft_inprocess_transport_test.cpp  raft_peer_proto_test.cpp  raft_persistence_test.cpp  raft_quorum_test.cpp  raft_replication_test.cpp  recovery_test.cpp  smoke_test.cpp  snapshot_test.cpp  sstable_test.cpp  wal_test.cpp
tests/assets/tls/: server.crt  server.key
tests/grpc/: CMakeLists.txt  api_status_test.cpp  grpc_idempotency_test.cpp  grpc_integration_test.cpp  tls_profile_toggle_test.cpp
tests/integration/: CMakeLists.txt  bench_gate_test.cpp  chaos_gate_test.cpp  failover_test.cpp  integrity_gate_test.cpp  multi_process_cluster_test.cpp
