cmake_minimum_required(VERSION 3.16)

project(KVStore VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

option(KVSTORE_ENABLE_WARNINGS_AS_ERRORS "Treat warnings as errors" ON)
option(KVSTORE_ENABLE_ASAN "Enable AddressSanitizer" OFF)
option(KVSTORE_ENABLE_UBSAN "Enable UndefinedBehaviorSanitizer" OFF)
option(KVSTORE_ENABLE_CLANG_TIDY "Enable clang-tidy when available" OFF)
option(KVSTORE_ENABLE_GRPC "Build gRPC service/server components" ON)

list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")

if(KVSTORE_ENABLE_CLANG_TIDY)
  find_program(CLANG_TIDY_BIN NAMES clang-tidy)
  if(CLANG_TIDY_BIN)
    set(CMAKE_CXX_CLANG_TIDY "${CLANG_TIDY_BIN}")
  else()
    message(WARNING "KVSTORE_ENABLE_CLANG_TIDY is ON, but clang-tidy was not found")
  endif()
endif()

function(kvstore_apply_compiler_warnings target_name)
  if(MSVC)
    target_compile_options(${target_name} PRIVATE /W4 /permissive-)
    if(KVSTORE_ENABLE_WARNINGS_AS_ERRORS)
      target_compile_options(${target_name} PRIVATE /WX)
    endif()
  else()
    target_compile_options(${target_name} PRIVATE -Wall -Wextra -Wpedantic)
    if(KVSTORE_ENABLE_WARNINGS_AS_ERRORS)
      target_compile_options(${target_name} PRIVATE -Werror)
    endif()
  endif()
endfunction()

function(kvstore_apply_sanitizers target_name)
  if(NOT MSVC)
    if(KVSTORE_ENABLE_ASAN)
      target_compile_options(${target_name} PRIVATE -fsanitize=address -fno-omit-frame-pointer)
      target_link_options(${target_name} PRIVATE -fsanitize=address)
    endif()
    if(KVSTORE_ENABLE_UBSAN)
      target_compile_options(${target_name} PRIVATE -fsanitize=undefined)
      target_link_options(${target_name} PRIVATE -fsanitize=undefined)
    endif()
  endif()
endfunction()

add_subdirectory(src)

enable_testing()
add_subdirectory(tests)
