option(KVSTORE_FETCH_GTEST "Fetch and build GoogleTest" OFF)

if(KVSTORE_FETCH_GTEST)
  include(FetchContent)
  FetchContent_Declare(
    googletest
    URL https://github.com/google/googletest/archive/refs/tags/v1.14.0.zip
  )
  set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
  FetchContent_MakeAvailable(googletest)
endif()

if(KVSTORE_ENABLE_GRPC)
  # Add subdirectories early so CTest can discover their tests reliably.
  add_subdirectory(grpc)
  add_subdirectory(integration)
endif()

add_executable(kvstore_smoke_test smoke_test.cpp)
target_link_libraries(kvstore_smoke_test PRIVATE kvstore_core)
kvstore_apply_compiler_warnings(kvstore_smoke_test)
kvstore_apply_sanitizers(kvstore_smoke_test)

add_test(NAME kvstore_smoke_test COMMAND kvstore_smoke_test)

add_executable(kvstore_wal_test wal_test.cpp)
target_link_libraries(kvstore_wal_test PRIVATE kvstore_core)
kvstore_apply_compiler_warnings(kvstore_wal_test)
kvstore_apply_sanitizers(kvstore_wal_test)
add_test(NAME kvstore_wal_test COMMAND kvstore_wal_test)

add_executable(kvstore_recovery_test recovery_test.cpp)
target_link_libraries(kvstore_recovery_test PRIVATE kvstore_core)
kvstore_apply_compiler_warnings(kvstore_recovery_test)
kvstore_apply_sanitizers(kvstore_recovery_test)
add_test(NAME kvstore_recovery_test COMMAND kvstore_recovery_test)

add_executable(kvstore_idempotency_test idempotency_test.cpp)
target_link_libraries(kvstore_idempotency_test PRIVATE kvstore_core)
kvstore_apply_compiler_warnings(kvstore_idempotency_test)
kvstore_apply_sanitizers(kvstore_idempotency_test)
add_test(NAME kvstore_idempotency_test COMMAND kvstore_idempotency_test)

add_executable(kvstore_sstable_test sstable_test.cpp)
target_link_libraries(kvstore_sstable_test PRIVATE kvstore_core)
kvstore_apply_compiler_warnings(kvstore_sstable_test)
kvstore_apply_sanitizers(kvstore_sstable_test)
add_test(NAME kvstore_sstable_test COMMAND kvstore_sstable_test)

add_executable(kvstore_cache_test cache_test.cpp)
target_link_libraries(kvstore_cache_test PRIVATE kvstore_core)
kvstore_apply_compiler_warnings(kvstore_cache_test)
kvstore_apply_sanitizers(kvstore_cache_test)
add_test(NAME kvstore_cache_test COMMAND kvstore_cache_test)

add_executable(kvstore_compaction_test compaction_test.cpp)
target_link_libraries(kvstore_compaction_test PRIVATE kvstore_core)
kvstore_apply_compiler_warnings(kvstore_compaction_test)
kvstore_apply_sanitizers(kvstore_compaction_test)
add_test(NAME kvstore_compaction_test COMMAND kvstore_compaction_test)

add_library(kvstore_raft_test_support
  ${PROJECT_SOURCE_DIR}/src/raft/test_transport.cpp
)
target_link_libraries(kvstore_raft_test_support PUBLIC kvstore_core)
kvstore_apply_compiler_warnings(kvstore_raft_test_support)
kvstore_apply_sanitizers(kvstore_raft_test_support)

add_executable(kvstore_raft_election_test raft_election_test.cpp)
target_link_libraries(kvstore_raft_election_test PRIVATE kvstore_raft_test_support)
kvstore_apply_compiler_warnings(kvstore_raft_election_test)
kvstore_apply_sanitizers(kvstore_raft_election_test)
add_test(NAME kvstore_raft_election_test COMMAND kvstore_raft_election_test)

add_executable(kvstore_raft_replication_test raft_replication_test.cpp)
target_link_libraries(kvstore_raft_replication_test PRIVATE kvstore_raft_test_support)
kvstore_apply_compiler_warnings(kvstore_raft_replication_test)
kvstore_apply_sanitizers(kvstore_raft_replication_test)
add_test(NAME kvstore_raft_replication_test COMMAND kvstore_raft_replication_test)

add_executable(kvstore_raft_quorum_test raft_quorum_test.cpp)
target_link_libraries(kvstore_raft_quorum_test PRIVATE kvstore_raft_test_support)
kvstore_apply_compiler_warnings(kvstore_raft_quorum_test)
kvstore_apply_sanitizers(kvstore_raft_quorum_test)
add_test(NAME kvstore_raft_quorum_test COMMAND kvstore_raft_quorum_test)

add_executable(kvstore_raft_failover_test raft_failover_test.cpp)
target_link_libraries(kvstore_raft_failover_test PRIVATE kvstore_raft_test_support)
kvstore_apply_compiler_warnings(kvstore_raft_failover_test)
kvstore_apply_sanitizers(kvstore_raft_failover_test)
add_test(NAME kvstore_raft_failover_test COMMAND kvstore_raft_failover_test)

add_executable(kvstore_raft_persistence_test raft_persistence_test.cpp)
target_link_libraries(kvstore_raft_persistence_test PRIVATE kvstore_raft_test_support)
kvstore_apply_compiler_warnings(kvstore_raft_persistence_test)
kvstore_apply_sanitizers(kvstore_raft_persistence_test)
add_test(NAME kvstore_raft_persistence_test COMMAND kvstore_raft_persistence_test)

add_executable(kvstore_raft_inprocess_transport_test raft_inprocess_transport_test.cpp)
target_link_libraries(kvstore_raft_inprocess_transport_test PRIVATE kvstore_core)
kvstore_apply_compiler_warnings(kvstore_raft_inprocess_transport_test)
kvstore_apply_sanitizers(kvstore_raft_inprocess_transport_test)
add_test(NAME kvstore_raft_inprocess_transport_test COMMAND kvstore_raft_inprocess_transport_test)

add_executable(kvstore_cluster_config_test cluster_config_test.cpp)
target_link_libraries(kvstore_cluster_config_test PRIVATE kvstore_core)
kvstore_apply_compiler_warnings(kvstore_cluster_config_test)
kvstore_apply_sanitizers(kvstore_cluster_config_test)
add_test(NAME kvstore_cluster_config_test COMMAND kvstore_cluster_config_test)

if(KVSTORE_ENABLE_GRPC)
  add_executable(kvstore_raft_peer_proto_test raft_peer_proto_test.cpp)
  target_link_libraries(kvstore_raft_peer_proto_test PRIVATE kvstore_raft_transport)
  kvstore_apply_compiler_warnings(kvstore_raft_peer_proto_test)
  kvstore_apply_sanitizers(kvstore_raft_peer_proto_test)
  add_test(NAME kvstore_raft_peer_proto_test COMMAND kvstore_raft_peer_proto_test)
endif()
